# subprocess_manager

./: CMakeLists.txt  README.md  conan_profile_gcc  conan_profile_macos_clang  conanfile.txt  config.yaml
include/: logging.hpp  multiplexed_manager.hpp  subprocess_manager.hpp  threaded_manager.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
